--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1,10 +1,15 @@
 ﻿l_english:
 
   ##########################
-  # FACTIONALISM/Nationalistic Fervour
+  # Focus Tooltips
+  ##########################
+  PB_FRA_Purge_tt:0 "\nIt is time to end this political charade once and for all. Let the disobedient rot, they had no place in Doriot's new France anyway."
+
+  ##########################
+  # Factionalism/Nationalistic Fervour
   ##########################
   Factionalism_tt:0 "Our current §OFactionalism§! is [?FRA_Factionalism|%0]"
-  Factionalism_tt_delayed:0 "France's political system is at odds with each other. Calling it a Far-right political union would be a gross understatement of the bribes and corruption that breathe throughout the French state. At all times there is someone, somewhere, with a differing opinion. These individuals must be hunted down until their very extinction.\n\nDepending on your level of Factionalism your stability and political power factors will increase/decrease. The Factionalism Fervour modifier will also tick down by a variable of two every month so be sure to keep it maintained!"
+  Factionalism_tt_delayed:0 "France's political system is at odds with each other. Calling it a Far-right political union would be a gross understatement of the bribes and corruption that breathe throughout the French state. At all times there is someone, somewhere, with a differing opinion. These individuals must be hunted down until their very extinction.\n\nDepending on your level of Factionalism your stability and political power factors will increase/decrease. The Factionalism Fervour modifier will also tick up by a variable of two every month so be sure to keep it maintained!"
   FRA_Low_Factionalism:0 "Low Factionalism"
   FRA_Med_Factionalism:0 "Medium Factionalism" 
   FRA_High_Factionalism:0 "High Factionalism"
@@ -20,7 +25,7 @@
   FRA_Medium_Nationalistic_Fervour:0 "Medium"
   FRA_Low_Nationalistic_Fervour:0 "Low"
   Nationalistic_Fervour_tt:0 "§ONationalistic Fervour§! is currently at [?FRA_Nationalistic_Fervour|%0]"
-  Nationalistic_Fervour_tt_delayed:0 "The defeat of the first Great War still heavily affects the French consciousness. Many fathers, brothers, and husbands were lost and those who survived such horrors thirst for revenge. A thirst that won't be quenched until the fall of the British and German empires.\n\nDepending on your level of Nationalistic Fervour various military modifers will apply. The Nationalistic Fervour modifier will also tick up by a variable of two every month so be sure to keep it maintained!"
+  Nationalistic_Fervour_tt_delayed:0 "The defeat of the first Great War still heavily affects the French consciousness. Many fathers, brothers, and husbands were lost and those who survived such horrors thirst for revenge. A thirst that won't be quenched until the fall of the British and German empires.\n\nDepending on your level of Nationalistic Fervour various military modifers will apply. The Nationalistic Fervour modifier will also tick down by a variable of two every month so be sure to keep it maintained!"
   FRA_Low_Nationalistic_Fervour_Idea:0 "Low Nationalistic Fervour" 
   FRA_Med_Nationalistic_Fervour_Idea:0 "Medium Nationalistic Fervour"
   FRA_High_Nationalistic_Fervour_Idea:0 "High Nationalistic Fervour"
@@ -43,7 +48,7 @@
   ##########################
   # TOP BAR
   ##########################
-  FRA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Conquer Europe and proclaim a new hegemony\n    - The largest tree in Pax Britannica with over 298 focuses\n    - Balance the needs of the Military and SP\n    - Industrialize France's major cities into metropolises\n    - Direct the Pacte Revanchiste towards your ideal Europe\n    - Balance France's political Factionalism\n    - Deal with the 1930s unemployment crisis\n\n§YSituation:§!\nThe Republic of France is a resurgent continental power in Europe in 1933.\n\n§YLore:§!\nFrance's history is deeply entangled with Europe's history. The liberal constitutionalist reformation followed the §YCrisis of 1798§!, birthing one of Europe's earliest truly parliamentary monarchies. The §YBourbon Dynasty§! once reigned from the shores of Iberia to the swamps of Venezia and beyond, and in their hubris thought to bring down the rising power of Germany. This fatal mistake would ultimately cost the Bourbons their crown, their empire, and lead to the deaths of nearly twenty million people. \n\n §YThe Great War§! ended with the German tricolor flying triumphant over Paris. The humiliating §YTreaty of Tours§! saw the French Empire dismantled, the monarchy formally ended, and a near total demilitarization. Naturally, this so-called Twenty Year Armistice sent France into a sprial of revanchist fervor. In the decades since the end of the war, French politics have become dominated by two main political factions; §YAction Française§! and the §YFrench Popular Front§!. \n\n The former, lead by §YCharles Maurras§!, is a restorationist pro-monarchy party. Technically rendered illegal under the post-war constitution, Maurras' extreme nationalist and Catholic stance have garnered enough support to earn him influence on the National Assembly. The Popular Front, headed by §YJacques Doriot§!, is an ultranationalist authoritarian party seeking revenge against Germany and Britain for their part in the Great War. Forced into a coalition to keep power away from more moderate voices, Doriot and Maurras have begun to increasingly undermine one another in a cynical game for total control. With the left-wing of the Popular Front under §YInessa Armand§! beginning to question Doriot's control, the political scene in France is likely to lead to bloodshed. Regardless of who wins, it seems that the anger of the French people will soon turn East to the moribund German Empire and beyond.\n\n The §YThe Republic of France§! is a §YGreat Power§!"
+  FRA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Conquer Europe and proclaim a new hegemony\n    - The largest tree in Pax Britannica with over 298 focuses\n    - Balance the needs of the Military and SP\n    - Industrialize France's major cities into metropolises\n    - Direct the Pacte Revanchiste towards your ideal Europe\n    - Balance France's political Factionalism\n    - Deal with the 1930s unemployment crisis\n    - Fuel the people's want for war\n\n§YSituation:§!\nThe Republic of France is a resurgent continental power in Europe in 1933.\n\n§YLore:§!\nFrance's history is deeply entangled with Europe's history. The liberal constitutionalist reformation followed the §YCrisis of 1798§!, birthing one of Europe's earliest truly parliamentary monarchies. The §YBourbon Dynasty§! once reigned from the shores of Iberia to the swamps of Venezia and beyond, and in their hubris thought to bring down the rising power of Germany. This fatal mistake would ultimately cost the Bourbons their crown, their empire, and lead to the deaths of nearly twenty million people. \n\n §YThe Great War§! ended with the German tricolor flying triumphant over Paris. The humiliating §YTreaty of Tours§! saw the French Empire dismantled, the monarchy formally ended, and a near total demilitarization. Naturally, this so-called Twenty Year Armistice sent France into a sprial of revanchist fervor. In the decades since the end of the war, French politics have become dominated by two main political factions; §YAction Française§! and the §YFrench Popular Front§!. \n\n The former, lead by §YCharles Maurras§!, is a restorationist pro-monarchy party. Technically rendered illegal under the post-war constitution, Maurras' extreme nationalist and Catholic stance have garnered enough support to earn him influence on the National Assembly. The Popular Front, headed by §YJacques Doriot§!, is an ultranationalist authoritarian party seeking revenge against Germany and Britain for their part in the Great War. Forced into a coalition to keep power away from more moderate voices, Doriot and Maurras have begun to increasingly undermine one another in a cynical game for total control. With the left-wing of the Popular Front under §YInessa Armand§! beginning to question Doriot's control, the political scene in France is likely to lead to bloodshed. Regardless of who wins, it seems that the anger of the French people will soon turn East to the moribund German Empire and beyond.\n\n The §YThe Republic of France§! is a §YGreat Power§!"
 
   ##########################
   # MINISTERS
@@ -844,7 +849,6 @@
   PB_FRA_MGE_Subservient_Partner:0 "What's Theirs is Ours"
   PB_FRA_Rearmament_Campaigns:0 "Rearmament Campaigns"
   PB_FRA_Underground_Factories:0 "Underground Factories"
-  PB_FRA_Fund_The_Steelworks:0 "Fund The Steelworks"
   PB_FRA_Promissory_Notes:0 "Promissory Notes"
   PB_FRA_Blood_Sweat_And_Patriotism:0 "Blood Sweat And Patriotism"
   PB_FRA_Military_Contracts:0 "Military Contracts"
@@ -1079,6 +1083,24 @@
   ##########################
   # FRENCH DECISIONS
   ##########################
+   
+  PB_FRA_Fund_The_Steelworks:0 "Heavy Industry Planning"
+  PB_FRA_Fund_The_Steelworks_desc:0 "\n\n\n\n\n\nThe need for heavy industry is at a critical level. With the unemployement crisis leaving millions of French without jobs the supply of cheap, eager labour is at an all time high, a supply we will gracefully accept."
+  PB_Heavy_Industry_In_Languedoc:0 "Heavy Industry In Languedoc"
+  PB_Dig_Sites_In_Languedoc:0 "Dig Sites In Languedoc"
+  PB_Heavy_Industry_In_Calais:0 "Heavy Industry In Calais"
+  PB_Dig_Sites_In_Calais:0 "Dig Sites In Calais"
+  PB_Heavy_Industry_In_Rhone:0 "Heavy Industry In Rhone"
+  PB_Dig_Sites_In_Rhone:0 "Dig Sites In Rhone"
+  PB_Heavy_Industry_In_Alpes:0 "Heavy Industry In Alpes"
+  PB_Dig_Sites_In_Alpes:0 "Dig Sites In Alpes"
+  PB_Heavy_Industry_In_Lorraine:0 "Heavy Industry In Lorraine"
+  PB_Dig_Sites_In_Lorraine:0 "Dig Sites In Lorraine"
+  PB_Heavy_Industry_In_Normandy:0 "Heavy Industry In Normandy"
+  PB_Dig_Sites_In_Normandy:0 "Dig Sites In Normandy"
+  PB_Heavy_Industry_In_Aquitaine:0 "Heavy Industry In Aquitaine"
+  PB_Dig_Sites_In_Aquitaine:0 "Dig Sites In Aquitaine"
+
   PB_FRA_Interservice_Rivalry:0 "Interservice Rivalry"
   PB_FRA_Interservice_Rivalry_desc:0 "\n\n\n\n\n\nSeveral areas of France's government are dominated by two major factions, the Military and the Sécurité publique. The Militarists, naturally, represent the interests of the French Armed Forces, particularly the Army and Navy. Opposing the Militarists is the Sécurité publique, the paramilitary arm of the French Popular Party. These two factions harbor a deep distrust of one another, with the Militarists seeing the SP as too fanatical and the SP seeing the military as ideological fifth columnists.\n\nBoth factions wish to see their influence dominant the French government, however if either faction gains too much political power, it could lead to §Rdramatic consequences§! for the current ruling party. Despite this, shifting power to either faction can grant bonuses to the military or the political scene, while keeping them balanced will only provide very small gains. We must carefully consider which faction we wish to empower, if any.\n\n[get_rivalry_balance]\n\n[get_SP_leader]\n\n[get_militarist_leader]\n"
   Test_Decision:0 "test"
@@ -1129,6 +1151,8 @@
   PB_Dutch_Integration_2:0 "Formalize the Netherlands as a French Province"
   PB_Claim_Algeria:0 "[ALG.GetFlag] Claim Algeria"
   PB_Algerian_Settlement:0 "[ALG.GetFlag] Establish French Settlements in Algeria"
+  PB_Rearmament_Goals:0 "Rearmament Goals"
+  PB_Autometro:0 "The Autométro"
 
   PB_FRA_European_Commonwealth:0 "The Paneuropean Commonwealth"
   PB_FRA_European_Commonwealth_desc:0 "\n\n\n\n\n\nThe future of the French State is interwoven with the future of the European continent. One proposed method by which France can maintain control of Europe's economic affairs is the Paneuropean Commonwealth. Though concepts of Paneuropeanism have existed for more than a decade, the Commonwealth idea is intended to ensure France has economic and by extension political control over states in their sphere of influence.\n\nThe program would help to economically isolate neutral states and gradually bring them into our influence, as well as deflect the influence of outside powers. More importantly, tying the economies of our sphere into that of France will make them fully dependent on us while allowing France to reap the benefits of monopolizing their resources.\n\n§YIf our economic influence in a nation is high enough, we can leverage that influence to turn them into an outright puppet regime.§!"
@@ -1209,6 +1233,7 @@
 
   FRA_available_tech_team:0 "Available §YTech Team§!:\n"
 
+  PB_FRA_unemployment_variable_minus0.05_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.05%§!"
   PB_FRA_unemployment_variable_minus0.1_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.1%§!"
   PB_FRA_unemployment_variable_minus0.25_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.25%§!"
   PB_FRA_unemployment_variable_minus0.5_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.5%§!"
