some tooltips for the intro tree

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -491,6 +491,9 @@
   RUS_religion_7_tt:0 "§GYour recruitment factor will increase by 30%§!."
   RUS_religion_8_tt:0 "§GYour surrender limit will increase by 20%§!."
   RUS_religion_9_tt:0 "§GYour improve relations ability will increase by 25%§!." 
+  RUS_intro_1_tt:0 "Black Hundreds divisions shall be brought up in the Baltic."
+  RUS_intro_2_tt:0 "Baltic Freikorps shall be brought up in the Baltic."
+  RUS_intro_3_tt:0 "Native Polish divisions shall be brought up."
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
