More russian stuff

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -212,6 +212,13 @@
   RUS.39.t:0 ""
   RUS.39.d:0 ""
   RUS.39.a:0 ""
+  RUS.39.b:0 ""
+  RUS.39.c:0 ""
+  RUS.40.t:0 ""
+  RUS.40.d:0 ""
+  RUS.40.a:0 ""
+  RUS.40.b:0 ""
+  RUS.40.c:0 ""
   ##########################
   # GUI DESCRIPTIONS
   ##########################
