--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -9,10 +9,10 @@
   # Factionalism/Nationalistic Fervour
   ##########################
   Factionalism_tt:0 "Our current §OFactionalism§! is [?FRA_Factionalism|%0]"
-  Factionalism_tt_delayed:0 "France's political system is at odds with each other. Calling it a Far-right political union would be a gross understatement of the bribes and corruption that breathe throughout the French state. At all times there is someone, somewhere, with a differing opinion. These individuals must be hunted down until their very extinction.\n\nDepending on your level of Factionalism your stability and political power factors will increase/decrease. The Factionalism Fervour modifier will also tick up by a variable of two every month so be sure to keep it maintained!"
-  FRA_Low_Factionalism:0 "Low Factionalism"
-  FRA_Med_Factionalism:0 "Medium Factionalism" 
-  FRA_High_Factionalism:0 "High Factionalism"
+  Factionalism_tt_delayed:0 "France's political system is at odds with each other. Calling it a Far-right political union would be a gross understatement of the bribes and corruption that breathe throughout the French state. At all times there is someone, somewhere, with a differing opinion. These individuals must be hunted down until their very extinction.\n\nDepending on your level of Factionalism your stability and political power factors will increase/decrease. The Factionalism Fervour modifier will also tick up by a variable of one every month so be sure to keep it maintained!"
+  FRA_Low_Factionalism_Idea:0 "Low Factionalism"
+  FRA_Med_Factionalism_Idea:0 "Medium Factionalism" 
+  FRA_High_Factionalism_Idea:0 "High Factionalism"
   FRA_Factionalism_0.02_decrease:0 "Factionalism will decrease by §G-2%§!"
   FRA_Factionalism_0.04_decrease:0 "Factionalism will decrease by §G-4%§!"
   FRA_Factionalism_0.06_decrease:0 "Factionalism will decrease by §G-6%§!"
@@ -25,7 +25,7 @@
   FRA_Medium_Nationalistic_Fervour:0 "Medium"
   FRA_Low_Nationalistic_Fervour:0 "Low"
   Nationalistic_Fervour_tt:0 "§ONationalistic Fervour§! is currently at [?FRA_Nationalistic_Fervour|%0]"
-  Nationalistic_Fervour_tt_delayed:0 "The defeat of the first Great War still heavily affects the French consciousness. Many fathers, brothers, and husbands were lost and those who survived such horrors thirst for revenge. A thirst that won't be quenched until the fall of the British and German empires.\n\nDepending on your level of Nationalistic Fervour various military modifers will apply. The Nationalistic Fervour modifier will also tick down by a variable of two every month so be sure to keep it maintained!"
+  Nationalistic_Fervour_tt_delayed:0 "The defeat of the first Great War still heavily affects the French consciousness. Many fathers, brothers, and husbands were lost and those who survived such horrors thirst for revenge. A thirst that won't be quenched until the fall of the British and German empires.\n\nDepending on your level of Nationalistic Fervour various military modifers will apply. The Nationalistic Fervour modifier will also tick down by a variable of one every month so be sure to keep it maintained!"
   FRA_Low_Nationalistic_Fervour_Idea:0 "Low Nationalistic Fervour" 
   FRA_Med_Nationalistic_Fervour_Idea:0 "Medium Nationalistic Fervour"
   FRA_High_Nationalistic_Fervour_Idea:0 "High Nationalistic Fervour"
