--- a/localisation/PB_equipment_l_english.yml
+++ b/localisation/PB_equipment_l_english.yml
@@ -4,7 +4,31 @@
  infantry_equipment_1933_short:0 "Interwar Eq."
  infantry_equipment_1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
 
+ infantry_rations:0 "Infantry Rations"
+ rations_equipment_1:0 "Rations"
+
+ infantry_drugs:0 "Basic Stimulant Manufacturing"
+ infantry_drugs_desc:0 "Utilizing a combination of various medical science developments, chemistry and electronics, our technical teams can begin creating a whole galaxy of multi-colored uppers, downers, screamers, laughers and mindbreaking psychedelics for combat and civilian use. All under the table and very legal, of course."
+ infantry_drugs_pep_pills:0 "Pep Pills"
+ infantry_drugs_thalasin:0 "Thalasin"
+ infantry_drugs_melange:0 "Melange"
+ infantry_drugs_victory_tonic:0 "Victory Tonic"
+
+ infantry_drugs_2:0 "Industrial Grade Stimulant Manufacturing"
+ infantry_drugs_soma:0 "Soma"
+ infantry_drugs_obetrol:0 "Obetrol"
+ infantry_drugs_milk_plus:0 "Milk Plus"
+ infantry_drugs_substance_f:0 "Substance F"
+
+ infantry_drugs_3:0 "Enhanced Industrial Stimulant Manufacturing"
+ infantry_strength_booster:0 "Musculo-Skeletal Gene Treatment"
+ infantry_intelligence_booster:0 "Ocular Injected Hypothalamus Therapy"
+
  infantry_standard_rounds:0 "Standard Munitions"
+ infantry_flechette_rounds:0 "Flechette Munitions"
+ infantry_armor_piercing_rounds:0 "Armor Piercing Munitions"
+ infantry_incendiary_rounds:0 "Incendiary Munitions"
+ infantry_explosive_rounds:0 "Explosive Munitions"
 
  gw_tank_equipment:0 "Great War Landship"
  gw_tank_equipment_short:0 "Great War Landship"
@@ -181,8 +205,8 @@
  ENG_infantry_equipment_1933:0 "Standard Infantry Rifle 1933 Pattern"
  ENG_infantry_equipment_1933_short:0 "S.I.R Pattern 1933"
 
- ENG_infantry_equipment_1:0 "Standard Infantry Rifle 1937 Pattern"
- ENG_infantry_equipment_1_short:0 "S.I.R Pattern 1937"
+ ENG_infantry_equipment_1:0 "Standard Infantry Rifle 1936 Pattern"
+ ENG_infantry_equipment_1_short:0 "S.I.R Pattern 1936"
 
  ENG_infantry_equipment_2:0 "Light Automatic Rifle Model Type No.1"
  ENG_infantry_equipment_2_short:0 "LAR Type 1"
