--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -696,7 +696,7 @@
   PB_FRA_Doriot_Personality_Cult:0 "Cult of Personality"
   PB_FRA_Anti_German_Stance:0 "Anti-Germanism"
   PB_FRA_New_Feminism:0 "New Feminism"
-  PB_FRA_New_French_State:0 "The New France"
+  PB_FRA_New_French_State:0 "A New France"
   PB_FRA_Cultural_Reconstruction:0 "Reconstruction Culturelle"
   PB_FRA_Left_Nationalist_Doctrine:0 "Left-Nationalist Doctrine"
   PB_FRA_lol_fucking_conscript_everyone:0 "Indiscriminate Conscription"
