--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -9,7 +9,7 @@
   # Factionalism/Nationalistic Fervour
   ##########################
   Factionalism_tt:0 "Our current §OFactionalism§! is [?FRA_Factionalism|%0]"
-  Factionalism_tt_delayed:0 "France's political system is at odds with each other. Calling it a Far-right political union would be a gross understatement of the bribes and corruption that breathe throughout the French state. At all times there is someone, somewhere, with a differing opinion. These individuals must be hunted down until their very extinction.\n\nDepending on your level of Factionalism your stability and political power factors will increase/decrease. The Factionalism Fervour modifier will also tick up by a variable of §R+1§! every month so be sure to keep it maintained!"
+  Factionalism_tt_delayed:0 "France's political system is at odds with each other. Calling it a Far-right political union would be a gross understatement of the bribes and corruption that breathe throughout the French state. At all times there is someone, somewhere, with a differing opinion. These individuals must be hunted down until their very extinction.\n\nDepending on your level of Factionalism your stability and political power factors will increase/decrease. The Factionalism Fervour modifier will also tick up by a variable of §R+1§! every month so be sure to keep it maintained!\n\nThese modifiers adjust §YMonthly§!"
   FRA_Low_Factionalism_Idea:0 "Low Factionalism"
   FRA_Med_Factionalism_Idea:0 "Medium Factionalism" 
   FRA_High_Factionalism_Idea:0 "High Factionalism"
@@ -25,7 +25,7 @@
   FRA_Medium_Nationalistic_Fervour:0 "Medium"
   FRA_Low_Nationalistic_Fervour:0 "Low"
   Nationalistic_Fervour_tt:0 "§ONationalistic Fervour§! is currently at [?FRA_Nationalistic_Fervour|%0]"
-  Nationalistic_Fervour_tt_delayed:0 "The defeat of the first Great War still heavily affects the French consciousness. Many fathers, brothers, and husbands were lost and those who survived such horrors thirst for revenge. A thirst that won't be quenched until the fall of the British and German empires.\n\nDepending on your level of Nationalistic Fervour various military modifers will apply. The Nationalistic Fervour modifier will also tick down by a variable of §R-1§! every month so be sure to keep it maintained!"
+  Nationalistic_Fervour_tt_delayed:0 "The defeat of the first Great War still heavily affects the French consciousness. Many fathers, brothers, and husbands were lost and those who survived such horrors thirst for revenge. A thirst that won't be quenched until the fall of the British and German empires.\n\nDepending on your level of Nationalistic Fervour various military modifers will apply. The Nationalistic Fervour modifier will also tick down by a variable of §R-1§! every month so be sure to keep it maintained!\n\nThese modifiers adjust §YMonthly§!"
   FRA_Low_Nationalistic_Fervour_Idea:0 "Low Nationalistic Fervour" 
   FRA_Med_Nationalistic_Fervour_Idea:0 "Medium Nationalistic Fervour"
   FRA_High_Nationalistic_Fervour_Idea:0 "High Nationalistic Fervour"
@@ -76,7 +76,7 @@
   FRA_PB_armand_pinsard_em:0 "Armand Pinsard"
   FRA_PB_jacques_correze_FM:0 "Jacques Corrèze"
   FRA_PB_francois_darlan_IM:0 "Francois Darlan"
-  FRA_PB_philippe_petain:0 "Philippe Pétain"
+  FRA_PB_philippe_petain:0 "Paul Legentilhomme"
   #SP
   FRA_PB_henri_fenet:0 "Henri Joseph Fenet"
   FRA_PB_leon_gaultier_em:0 "Léon Gaultier"
@@ -812,7 +812,7 @@
   PB_FRA_Purge_desc:0 "With the Triumvirate's political dominance all but guaranteed and Doriot effectively being both President and Prime minister of France the days coming will undoubtedly be a literal and figurative mess. The left-nationalists and the monarchists are aware of Doriot's unhinged power and as of recently rumours have spread that the SP is planning a coup in support of him. Whatever the case may be one thing for sure is that the future of France will be decided by the days following, and the rest of the world for that matter.   "
 
   PB_FRA_Purge_Aftermath:0 "The Morning After"
-  PB_FRA_Purge_Aftermath_desc:0 "The Morning After"
+  PB_FRA_Purge_Aftermath_desc:0 "The streets of Paris lay disturbingly quiet. Nothing but the sound of wind can be heard. These very streets tell folly stories, at least one would think. The fresh fruit stalls are covered in blood, the drains clogged with rubbish, and the smell rancid with rot, and yet France is finally free."
 
   PB_FRA_Maurras_Takeover:0 "Maurras Survives the Night"
   PB_FRA_Maurras_Takeover_desc:0 "To the shock and suprise of all of france, Action Française, once banned and hounded by the goons of the regime has triumphed over the traitorous Doriot. Already talks are underway to invite the previous emperor Jean I to take back his rightful throne." 
@@ -861,7 +861,9 @@
   PB_FRA_Indiscriminate_Conscription:0 "All Will Have the Chance to Die for France"
   PB_FRA_Indiscriminate_Conscription_desc:0 "Soon the world will be plunged into total war, between us and our allies and the forces of the eternal anglo and german. In terms of sheer population they outnumber us massively. In order to claim total victory in the coming war we must press more of our population into service then most nations would be willing. No price is too high for france."
   PB_FRA_Joan_of_Arc_Legacy:0 "Legacy of Jeanne d'Arc"
+  PB_FRA_Joan_of_Arc_Legacy_desc:0 "Much like the Maid of Orléans Armand shall liberate France from the grasp of the British and German hegemonies. Their empires will cease to exist in time, eventually replaced. Such realities will require both man and women in battle, and on the homefront."
   PB_FRA_Ideological_Fanatacism:0 "Ideological Fanatacism"
+  PB_FRA_Ideological_Fanatacism_desc:0 "The French state shall give its all to its citizens. All it asks for in return is complete devotion to itself and its ideals. Those that resist will be converted or 'exiled', this is non-negotiable. If we are to build a stable and prosperous utopia then unity is a must. Even if reaching said utopia means bloodshed."
 
   PB_FRA_Doctrine_of_Integralism:0 "The Doctrine of Integralism"
   PB_FRA_Doctrine_of_Integralism_desc:0 "Integralism is an ideology that rejects the modern structures of the nation state in favor of traditional hierarchy, seeking to revive a perceived older patriotism, based on faith, family and community."  
@@ -1314,7 +1316,7 @@
   Pacte_IP_Peace_With_Honor:0 "A Peace With Honor Has Been Signed With The Imperial Powers"
 
   PB_FRA_Doriot_Coup_tooltip:0 "§YDoriot's Coup d'état has occurred§!"
-  PB_FRA_Maurras_Survived_tooltip:0 "§YMaurras survived the attempted coup§!"
+  PB_FRA_Muarras_Survives_tooltip:0 "§YMaurras survived the attempted coup§!"
   PB_FRA_Doriot_Coup_Succeeded_tooltip:0 "§YDoriot's Coup d'état has succeeded§!"
   PB_FRA_Armand_Counter_Coup_tooltip:0 "§YThe Armandists outmanuevered both factions§!"
 
