--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -384,6 +384,26 @@
   PBNews.99.d:0 ""
   PBNews.99.a:0 "Germany has left Dietland to die"
 
+  PBNews.100.t:0 "WALLONIA FALLS"
+  PBNews.100.d:0 ""
+  PBNews.100.a:0 "Another nation taken"
+
+  PBNews.101.t:0 "DIETLAND FALLS"
+  PBNews.101.d:0 ""
+  PBNews.101.a:0 "An empire has been bested?"
+
+  PBNews.102.t:0 "CORSICA FALLS"
+  PBNews.102.d:0 ""
+  PBNews.102.a:0 "There is only one france"
+
+  PBNews.103.t:0 "BASQUE FALLS"
+  PBNews.103.d:0 ""
+  PBNews.103.a:0 "Wait, which ocuntry is that?"
+
+
+
+
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
