--- a/localisation/PB_Opinion_Modifiers_l_english.yml
+++ b/localisation/PB_Opinion_Modifiers_l_english.yml
@@ -11,5 +11,5 @@
   supported_enemy:0 "Supported Our Enemies"
   rising_power:0 "New World Order"
   supported_our_government:0 "Supported Our Government"
-
+  brothers_in_arms:0 "Brothers in Arms"
   tariffs:0 "Economic Tariffs Imposed"
