god this was a pain in the ass

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -148,7 +148,7 @@
   French.13.d:0 ""
   French.13.a:0 "Vive la Empire!"
 
-  French.14.t:0 "Armand Outlives her Usefullness"
+  French.14.t:0 "Armand Outlives her Usefulness"
   French.14.d:0 ""
   French.14.a:0 "Stability must be bought in blood."
 
@@ -515,9 +515,9 @@
   
   French_flavour.9.t:0 "The Degenerate Finds no Hope"
   French_flavour.9.d:0 ""
-  French_flavour.9.a:0 "Time For A Shower"
+  French_flavour.9.a:0 "Hope turns to ash"
 
-  French_flavour.10.t:0 "Kindess is the language of people"
+  French_flavour.10.t:0 "Kindness is the language of people"
   French_flavour.10.d:0 ""
   French_flavour.10.a:0 "In Times Of Great Madness, Humanity Still Stands Strong"
 
@@ -551,7 +551,7 @@
 
   French_flavour.18.t:0 "The Pride Of France"
   French_flavour.18.d:0 ""
-  French_flavour.18.a:0 "And They Question Our Methods"
+  French_flavour.18.a:0 "A ship to rival all of Britannia"
 
   French_flavour.19.t:0 "Suspicious Citizen Number: 8012234"
   French_flavour.19.d:0 ""
@@ -600,9 +600,9 @@
 
   French_flavour.38.t:0 "The Last Sermon"
   French_flavour.38.d:0 ""
-  French_flavour.38.a:0 "Dinner For One Please"
+  French_flavour.38.a:0 "Soon they will remember the Father"
 
-  French_flavour.39.t:0 "Those Whom Lived Here"
+  French_flavour.39.t:0 "Those Who had Lived Here"
   French_flavour.39.d:0 ""
   French_flavour.39.a:0 "Go Play Now Children"
 
@@ -628,11 +628,11 @@
 
   French_flavour.45.t:0 "Those who remain"
   French_flavour.45.d:0 ""
-  French_flavour.45.a:0 "Work Harder, Not Smarter"
+  French_flavour.45.a:0 "We never should have trusted him"
  
   French_flavour.46.t:0 "The King's Camelots"
   French_flavour.46.d:0 ""
-  French_flavour.46.a:0 "Onwards Men"
+  French_flavour.46.a:0 "God save the French King!"
 
   French_flavour.47.t:0 "The New Church"
   French_flavour.47.d:0 ""
@@ -646,9 +646,9 @@
   French_flavour.49.d:0 ""
   French_flavour.49.a:0 "Such A Wonderful Voice"
 
-  French_flavour.50.t:0 "Long Live the Emperor"
+  French_flavour.50.t:0 "The Emperor's Favoured"
   French_flavour.50.d:0 ""
-  French_flavour.50.a:0 "And They Said We Wouldn't Amount To Anything"
+  French_flavour.50.a:0 "The King and his Subject"
 
   French_flavour.51.t:0 "A Drink Between Brothers"
   French_flavour.51.d:0 ""
@@ -673,6 +673,59 @@
   French_flavour.56.t:0 "The National Red Army"
   French_flavour.56.d:0 ""
   French_flavour.56.a:0 "The New Vanguards Of France"
+
+  French_flavour.57.t:0 "La Garde Interne"
+  French_flavour.57.d:0 ""
+  French_flavour.57.a:0 "France will not die if Paris is lost"
+
+  French_flavour.58.t:0 "The Worker's Myth"
+  French_flavour.58.d:0 ""
+  French_flavour.58.a:0 "This Georges Sorel is intresting"
+
+  French_flavour.59.t:0 "The Long Movement"
+  French_flavour.59.d:0 ""
+  French_flavour.59.a:0 "Student, Teacher it matters not"
+
+  French_flavour.60.t:0 "The Feminist Talk"
+  French_flavour.60.d:0 ""
+  French_flavour.60.a:0 "Women will not be oppressed forever"
+
+  French_flavour.61.t:0 "Long live the Revolutionary Revolution"
+  French_flavour.61.d:0 ""
+  French_flavour.61.a:0 "Left, Right, Left, Right"
+
+  French_flavour.62.t:0 "Nothing Greater Than the Army"
+  French_flavour.62.d:0 ""
+  French_flavour.62.a:0 "March for France!"
+
+  French_flavour.62.t:0 "Back to Basics"
+  French_flavour.62.d:0 ""
+  French_flavour.62.a:0 "Simply take our land back, nothing else"
+
+  French_flavour.64.t:0 "End of the Rivalry"
+  French_flavour.64.d:0 ""
+  French_flavour.64.a:0 "We won..."
+
+  French_flavour.65.t:0 "The Old Veteran"
+  French_flavour.65.d:0 ""
+  French_flavour.65.a:0 "The Long Journey wins"
+
+  French_flavour.66.t:0 "Mystic Militarism"
+  French_flavour.66.d:0 ""
+  French_flavour.66.a:0 "When's the next one?"
+
+  French_flavour.67.t:0 "Phantom of the State"
+  French_flavour.67.d:0 ""
+  French_flavour.67.a:0 "Where do they go?"
+
+  French_flavour.68.t:0 "Only we may hold the bat"
+  French_flavour.68.d:0 ""
+  French_flavour.68.a:0 "So, now what?"
+
+  French_flavour.69.t:0 "The Intellectual"
+  French_flavour.69.d:0 ""
+  French_flavour.69.a:0 "Long live the State"
+
 
   
 
