Added in loc for Russian puppets

--- a/localisation/PB_RussianAutonomies_l_english.yml
+++ b/localisation/PB_RussianAutonomies_l_english.yml
@@ -19,10 +19,21 @@
 
 PB_BAL_denikin_playground:0 "Denikin's Playground"
 PB_BAL_denikin_playground_desc:0 ""
+PB_BAL_denikin_playground_2:0 "Denikin's Dominion"
+PB_BAL_denikin_playground_2_desc:0 ""
+PB_BAL_denikin_playground_3:0 "Denikin's Shackles"
+PB_BAL_denikin_playground_3_desc:0 ""
 PB_ASK_wealthy_prison_colony:0 "The Wealthy Prison Colony"
 PB_ASK_wealthy_prison_colony_desc:0 ""
 PB_TRS_growing_heresy:0 "The Growing Heresy"
 PB_TRS_growing_heresy_desc:0 ""
+PB_TRS_growing_heresy_2:0 "Heretical Crackdown"
+PB_TRS_growing_heresy_2_desc:0 ""
+PB_TRS_growing_heresy_3:0 "Heretical Explosion"
+PB_TRS_growing_heresy_3_desc:0 ""
 PB_FIN_weak_military_control:0 "Weak Military Control Over Finland"
 PB_FIN_weak_military_control_desc:0 ""
-
+PB_FIN_weak_military_control_2:0 "Military Control Strengthened"
+PB_FIN_weak_military_control_2_desc:0 ""
+PB_KRD_russian_economic_control:0 "Russian Economic Control"
+PB_KRD_russian_economic_control_desc:0 ""
