--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -924,13 +924,13 @@
   britain.36.b:0 "Tunisia should remain as it is."
 
   britain.37.t:0 "The British Demand Subjugation"
-  britain.37.d:0 ""
+  britain.37.d:0 "Our diplomats in London have been contacted by the British demanding the interrogation of Tunisia into the realm of Britain and her Dominions. We have but two choices; accept their offer and prevent a massacre or accept the offer and pray to Allah that we may survive the coming onslaught. It is your choice my Bey."
   britain.37.a:0 "We cannot hope to resist"
   britain.37.b:0 "We will not give up our autonomy!"
 
   britain.38.t:0 "Britain introduces Racial Mandates"
-  britain.38.d:0 ""
-  britain.38.a:0 "Bloody Londers telling us how to to our jobs..."
+  britain.38.d:0 "William Clarke strode down the long corridor heading towards his boss- the local British top Bureaucrat in this God forbidden land. William himself was a bureaucrat but not of a high standing; one out of the thousands of British men trying to gain recognition through the paperwork of the Imperial Federation, landing him a job somewhere in Africa filled with rebellious natives and diseases he couldn't pronounce. As he walked into his supieror's office who was dilligently at work he placed the letter down with anxiety; desperate to know what was on the papers.\n\n'Thank you Mr Clarke, you may return to your duties.'\n\nWith disappointment Will walked out of the office until he heard his supieror screaming with such rage it made Will shiver.\n\n'They want us to impose racial mandates on these FUCKING ARMED NATIVES....'\n\nWill left the room both amused and worried at the same time. London imposing racial mandates? Will knew what would be coming next and he wouldn't be there to see it, cowardly or not he had to go now."
+  britain.38.a:0 "Dear we're packing our bags, quickly before the natives realise"
 
   britain.39.t:0 "Beginning the Land Seizure Program"
   britain.39.d:0 ""
