--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1,6 +1,15 @@
 ﻿l_english:
 
   ##########################
+  # Leader Descriptions
+  ##########################
+  PB_Jacques_Doriot_Desc:0 "§YBorn:§! 26/9/1898\n\n§YJacques Doriot§! is something of an enigma in French politics. Born to a working class family in Saint Denis, near Paris. At an early age, Doriot was exposed to the revolutionary politics of wartime France. Far too young to join the military at the onset of the Great War, Doriot could only watch from the sidelines as France began to shudder and break under the strain of war. As supplies dwindled daily and the sounds of gunfire approached Paris, Doriot's family fled to Orléans, where they would remain until the end of the conflict.\n\nThe collapse of the French Empire and the imposition of a Republic would catapult the nation into a period of intense unrest. Revolutionaries, restorationists and common thugs battled in the streets over what was left of the French corpse. It was in this pressure cooker political scene that Doriot would begin his rise to power. Initially a member of the Socialist Youth League, he abandoned left wing politics after the failed September Paris Uprising in 1926. Instead, he aligned himself with the newly formed French Popular Front and Marcel Déat, and by 1928 the FPF had taken the reigns of the Republic in a coalition with the pro-monarchist Action Française. Déat died suddenly in 1929 and the subsequent power struggle ended with Doriot seizing control of the party, though at the cost of major concessions to the AF and the Left-Nationalists. Now the de-facto dictator of France, Jacques Doriot seeks revenge against the Germans and the re-establishment of France's dominance in Europe. The French population, radicalized by Long Depression and the Treaty of Tours, stand united, at least on paper, with the Grand Marshal's vision of a new imperial France.\n\n§RAcross the border lies the enemy of the French people, and it is the holy duty of the Grand Marshal to exorcise this degenerate Judeo-Germanic curse from Europe, no matter the cost!§!"
+
+  PB_Charles_Muarras_Desc:0 "§YBorn:§! 20/4/1868\n\n§YCharles Muarras§! is considered by some as France's most loyal patriot, and by others as a crooked old fool that believes in bygone traditions. Whatever the case may be one thing for sure is Muarras and his cronies remain adamant on the return of the Bourbon dynasty, which has remained in exile in Corsica since the Great War. Before the Great War Muarras was a self-employed author mainly writing non-fiction books on political science, taking inspiration from various pre-20th century philosophies, namely Existentialism and Phenomenology.\n\nMuarras lived a rather poor life finding only minor success in a few written texts but by the end of the Great War this difficulty only became worse. Food stalls became a permanent fixture of Muarras' life until a small pro-monarchist printing agency hired him. From there Muarras rose through the ranks and established himself as a fairly notable writer, ultimately becoming head of the New Kings League newspaper company.\n\nBy 1927 the political landscape of France was by all definitions an utter shit show. Strikes and protests occurred almost daily and from this point on Muarras started to present himself as the man with all the solutions, gathering public support and finding a 'comfortable' position in the newly founded Front Populaire Français. Today Charles Muarras stands victorious in the triumvirate and though stability is finally restored, to some degree, reconstruction and preperation for Europe's 'darkest years' is required if France is to outlive the storm.\n\n§RAll heil Muarras!§!"
+
+  PB_Inessa_Armand_DESC:0 "§YBorn:§! 8/5/1874\n\n§YInessa Armand§! can only be described as both revolutionary and counter-revolutionary. She developed Armandism - a form of social nationalism - by borrowing elements from different political extremes and combining them into one heterogenous belief. Armand gained much renown between middle-lower class individuals during the unruly years of 1926-1928, participating in numerous strikes and boycotts. While not exactly Jacobin Armand does contain a certain distrust of those on top, hence her clique being the weakest of the triumvirate.\n\nPrior and during the Great War Armand served as an auxiliary nurse, seeing first hand the effects and brutalities of conflict unlike the other triumvirate memebers. Even when the war was over peace had not fallen upon France. The years following, especially those before 1929, were ravaged with social and political strife; something that worked greatly in favour for Armand. By the time the Front Populaire Français was established Inessa Armand was already a well known name amongst the French people. With her political rivals now dead, Armand can now fully realize her perfect France.\n\n§RGod bless our d'Arc, and our liberated France!§!"
+
+  ##########################
   # Focus Tooltips
   ##########################
   PB_FRA_Purge_tt:0 "\nIt is time to end this political charade once and for all. Let the disobedient rot, they had no place in Doriot's new France anyway."
@@ -54,7 +63,7 @@
   # MINISTERS
   ##########################
   #DORIOT
-  FRA_PB_victor_barthelemy:0 "Victor Barthélemy"
+  FRA_PB_jean_mayol:0 "Jean de Mayol de Lupé"
   FRA_PB_robert_brasillach_FM:0 "Robert Brasillach"
   FRA_PB_andre_grisoni_EM:0 "André Grisoni"
   FRA_PB_pierre_pucheu_IM:0 "Pierre Pucheu"
@@ -62,13 +71,13 @@
   #MUARRAS
   FRA_PB_raphael_alibert:0 "Raphaël Alibert"
   FRA_PB_leon_daudet_EM:0 "Léon Daudet" 
-  FRA_PB_hugues_panassie_FM:0 "Hugues Panassié"
+  FRA_PB_maurice_papon_FM:0 "Maurice Papon"
   FRA_PB_georges_valois_IM:0 "Georges Valois"
   FRA_PB_maurice_pujo:0 "Maurice Pujo"
   #ARMAND
   FRA_PB_hubert_lagardelle:0 "Hubert Lagardelle"
   FRA_PB_adrien_marquet_EM:0 "Adrien Marquet"
-  FRA_PB_henri_barbe_FM:0 "Henri Barbé"
+  FRA_PB_rene_bousquet_FM:0 "René Bousquet"
   FRA_PB_hubert_lagardelle_IM:0 "Hubert Lagardelle"
   FRA_PB_simone_beauvoir:0 "Simone de Beauvoir"
   #MILITARY 
@@ -76,12 +85,12 @@
   FRA_PB_armand_pinsard_em:0 "Armand Pinsard"
   FRA_PB_jacques_correze_FM:0 "Jacques Corrèze"
   FRA_PB_francois_darlan_IM:0 "Francois Darlan"
-  FRA_PB_philippe_petain:0 "Paul Legentilhomme"
+  FRA_PB_paul_legentilhomme:0 "Paul Legentilhomme"
   #SP
-  FRA_PB_henri_fenet:0 "Henri Joseph Fenet"
-  FRA_PB_leon_gaultier_em:0 "Léon Gaultier"
-  FRA_PB_rene_binet_fm:0 "René Binet"
-  FRA_PB_eugene_vaulot_IM:0 "Eugène Vaulot"
+  FRA_PB_paul_touvier:0 "Paul Touvier"
+  FRA_PB_emile_dewoitine_em:0 "Émile Dewoitine"
+  FRA_PB_celestin_laine_fm:0 "Célestin Lainé"
+  FRA_PB_jean_fontenoy_IM:0 "Jean Fontenoy"
   FRA_PB_jean_paquis:0 "Jean Hérold-Paquis"
 
 
@@ -1123,7 +1132,7 @@
   PB_FRA_Invest_In_Carriers:0 "Invest In Carriers" 
   PB_FRA_France_Rule_The_Waves:0 "France Rule The Waves"
 
-  PB_FRA_Reform_Military_Air:0 "Armée de l'Air"
+  PB_FRA_Reform_Military_Air:0 "The Armée de l'Air"
   PB_FRA_Superiorite_aerienne:0 "Supériorité Aérienne"
   PB_FRA_Destruction_stragetique:0 "Destruction Stragétique"
   PB_FRA_Doctrine_Planning:0 "Doctrine Planning"
