--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1432,22 +1432,24 @@
   PB_FRA_HAN_MIL:0 "The §YMilitary§! will be very pleased with this arrangement"
   PB_FRA_Greater_France_tt:0 "\n§RUnavailable At Current Release:§!\nDepending on your victory circumstances a new focus tree will load"
 
-  FRA_not_a_decision:0 "This is not a decision"
-  FRA_control_england:0 "Collaborator England controls a piece of England"
-  FRA_control_wales:0 "Collaborator Wales controls a piece of Wales"
-  FRA_control_scotland:0 "Collaborator Scotland controls a piece of Scotland"
-  FRA_control_cornwall:0 "Collaborator Cornwall controls a piece of Cornwall"
-  FRA_control_southern_germany:0 "Collaborator Bavaria controls a piece of Southern Germany"
-  FRA_control_westphalia:0 "Collaborator Westphalia controls a piece of Westphalia"
-  FRA_control_austria:0 "Collaborator Austria controls a piece of Austria"
-  FRA_control_hanover:0 "Collaborator Hanover controls a piece of Hanover"
-  FRA_control_italy:0 "Collaborator Italy controls a piece of Italy"
-  FRA_control_libya:0 "Collaborator Italy controls a piece of Libya"
-  FRA_control_dalmatia:0 "Collaborator Italy controls a piece of Dalmatia"
-  FRA_control_ireland:0 "Collaborator Ireland controls a piece of Ireland"
-  FRA_control_denmark:0 "Collaborator Denmark controls a piece of Denmark"
-  FRA_control_norway:0 "Collaborator Norway controls a piece of Norway"
-  FRA_control_sweden:0 "Collaborator Sweden controls a piece of Sweden"
+  FRA_not_a_decision:0 "This is §Rnot§! a decision"
+  FRA_control_england:0 "A §YBritish§! Collaborator controls a piece of England"
+  FRA_control_wales:0 "A §YBritish§! Collaborator controls a piece of Wales"
+  FRA_control_scotland:0 "A §YBritish§! Collaborator controls a piece of Scotland"
+  FRA_control_cornwall:0 "A §YBritish§! Collaborator controls a piece of Cornwall"
+  FRA_control_england:0 "A §YBritish§! Collaborator controls any piece of Great Britain"
+  FRA_control_southern_germany:0 "A §YGerman§! Collaborator controls a piece of Southern Germany"
+  FRA_control_germany:0 "A §YGerman§! Collaborator controls any portion of Germany"
+  FRA_control_westphalia:0 "A §YGerman§! Collaborator controls a piece of Westphalia"
+  FRA_control_austria:0 "A §YGerman§! Collaborator controls a piece of Austria"
+  FRA_control_hanover:0 "A §YGerman§! Collaborator controls a piece of Hanover"
+  FRA_control_italy:0 "An §YItalian§! Collaborator controls a piece of Italy"
+  FRA_control_libya:0 "An §YItalian§! Collaborator controls a piece of Libya"
+  FRA_control_dalmatia:0 "An §YItalian§! Collaborator controls a piece of Dalmatia"
+  FRA_control_ireland:0 "An §YIrish§! Collaborator controls a piece of Ireland"
+  FRA_control_denmark:0 "A §YScandanavian§! Collaborator controls a piece of Denmark"
+  FRA_control_norway:0 "A §YScandanavian§! Collaborator controls a piece of Norway"
+  FRA_control_sweden:0 "A §YScandanavian§! Collaborator controls a piece of Sweden"
 
   PB_FRA_MIL_PURGE:0 "All military leaders that have the §YMilitarist Loyalties§! trait will be §RPurged§!"
   PB_FRA_SP_PURGE:0 "All military leaders that have the §YSécurité Publique Loyalties§! trait will be §RPurged§!"
