--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -400,7 +400,25 @@
   PBNews.103.d:0 ""
   PBNews.103.a:0 "Wait, which country is that?"
 
+  PBNews.104.t:0 "IZZET PASHA: DEAD"
+  PBNews.104.d:0 ""
+  PBNews.104.a:0 "The Ottomans still live?"
 
+  PBNews.105.t:0 "FEVZI CAKMAK, NEW OTTOMAN GOVERNOR"
+  PBNews.105.d:0 ""
+  PBNews.105.a:0 "More of the same in the dead man"
+
+  PBNews.106.t:0 "CORPORATIONS AT TURKEY'S HELM?"
+  PBNews.106.d:0 ""
+  PBNews.106.a:0 "All for the money"
+
+  PBNews.107.t:0 "KEMAL ATAÜRK TAKES THE THRONE"
+  PBNews.107.d:0 ""
+  PBNews.107.a:0 "Is he truly loyal to Russia?"
+
+  PBNews.107.t:0 "OTTOMANS BETRAY RUSSIA"
+  PBNews.107.d:0 ""
+  PBNews.107.a:0 "Will this be the edge they need?"
 
 
 
