Episode 66: Big Push comign UP
- A LOTTA STUFF
- German State Interface
- On Actions
- Focus
- Events
- Localisation
- Cities
- Focus Icons
- propably more

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -105,6 +105,10 @@
   PB_GER_Rearmament:0 "Rearmament"
   PB_GER_Philip_Compensation:0 "Philippines Self Governing Support"
 
+  PB_GER_Rhineland_Unrest_Critical:0 "High Unrest in the Rhineland"
+  PB_GER_Rhineland_Unrest_Moderate:0 "Moderate Unrest in the Rhineland"
+  PB_GER_Rhineland_Unrest_Normal:0 "Normal Unrest in the Rhineland"
+
   ##########################
   # FOCUSES
   ##########################
@@ -621,12 +625,67 @@
   # KINGDOMS MECHANIC
   ##########################
   PB_GER_Kingdom_Influence:0 "The State of the Federation"
-  PB_GER_Kingdom_Influence_desc:0 "\n\n\n\n\n\nThe United Kingdoms of Germany is a federation of German states, under which many former Austrian-aligned Kingdoms have maintained autonomy under their local rulers. Though once this decentralized system transformed Germany into a center of political thought and culture, now autonomy has become a crutch for the German state. The ongoing economic depression has reignted nationalism in many of the strongest German states, some of whom have begun to entertain ideas of going it alone again.\n\nIn order to pass meaningful reform and centralize the German government, unrest in the major kingdoms must be kept below §Y50%§! in order to pass §YCentralization Reforms§!. These reforms will prevent further unrest and, at least in that regard, stabilize one aspect of German politics.\n\n"
-  GER_rhineland_unrest_Tracking:0 "Unrest in the Rhineland is at §Y[?GER.Germany_Rhineland_Unrest]%§!"
-  GER_brandenburg_unrest_Tracking:0 "Unrest in Brandenburg is at §Y[?GER.Germany_Brandenburg_Unrest]%§!"
-  GER_bavaria_unrest_Tracking:0 "Unrest in Bavaria is at §Y[?GER.Germany_Bavaria_Unrest]%§!"
-  GER_saxony_unrest_Tracking:0 "Unrest in Saxony is at §Y[?GER.Germany_Saxony_Unrest]%§!"
-  GER_hannover_unrest_Tracking:0 "Unrest in Hannover is at §Y[?GER.Germany_Hannover_Unrest]%§!"
+  PB_GER_Kingdom_Influence_desc:0 "\n\n\n\n\n\nThe United Kingdoms of Germany is a federation of German states, under which many former Austrian-aligned Kingdoms have maintained autonomy under their local rulers. Though once this decentralized system transformed Germany into a center of political thought and culture, now autonomy has become a crutch for the German state. The ongoing economic depression has reignted nationalism in many of the strongest German states, some of whom have begun to entertain ideas of going it alone again.\n\nIn order to pass meaningful reform and centralize the German government, unrest in the major kingdoms must be kept below §Y50%§! in order to pass §YCentralization Reforms§!. These reforms will prevent further unrest and, at least in that regard, stabilize one aspect of German politics.\n\n\n\n\n\n\n\n\n\n\n\n"
+  #GER_rhineland_unrest_Tracking:0 "Unrest in the Rhineland is at §Y[?GER.Germany_Rhineland_Unrest]%§!"
+  #GER_brandenburg_unrest_Tracking:0 "Unrest in Brandenburg is at §Y[?GER.Germany_Brandenburg_Unrest]%§!"
+  #GER_bavaria_unrest_Tracking:0 "Unrest in Bavaria is at §Y[?GER.Germany_Bavaria_Unrest]%§!"
+  #GER_saxony_unrest_Tracking:0 "Unrest in Saxony is at §Y[?GER.Germany_Saxony_Unrest]%§!"
+  #GER_hannover_unrest_Tracking:0 "Unrest in Hannover is at §Y[?GER.Germany_Hannover_Unrest]%§!"
+
+
+  GER_Bayern_button_tt:0 "Volksstaat Bayern"
+  GER_Osterreich_button_tt:0 "Volksstaat Österreich"
+  GER_Brandenburg_button_tt:0 "Volksstaat Brandenburg"
+  GER_Sachsen_button_tt:0 "Volksstaat Sachsen"
+  GER_Hannover_button_tt:0 "Volksstaat Hannover"
+  GER_Rheinland_button_tt:0 "Volksstaat Rheinland"
+  GER_Frankfurt_button_tt:0 "Volksstaat Frankfurt"
+  GER_Elsass_button_tt:0 "Volksstaat Elsass"
+
+
+  GER_centralization_no_info:0  "Please Select a State"
+  GER_centralization_unrest_info:0 "Unrest:"
+  GER_centralization_unrest_impact_info:0 "Impact:"
+  
+  GER_unrest_in_rhineland:0 "[GER_unrest_in_rhineland]"
+  GER_unrest_in_rhineland_tracking:0 "§Y[?GER.Germany_Rhineland_Unrest]§!"
+  GER_unrest_impact_rhineland:0 "[GER_unrest_impact_rhineland]"
+  GER_unrest_impact_rhineland_low:0 "§R-5% Stability§!\n§R-0.025 Political Power Gain§!"
+  GER_unrest_impact_rhineland_medium:0 "§R-10% Stability§!\n§R-0.05 Political Power Gain§"
+  GER_unrest_impact_rhineland_high:0 "§R-15% Stability§!\n§R-0.1 Political Power Gain§"
+
+  GER_unrest_in_frankfurt:0 "[GER_unrest_in_frankfurt]"
+  GER_unrest_in_frankfurt_tracking:0 "§Y[?GER.Germany_Frankfurt_Unrest]§!"
+
+  GER_unrest_in_elsass:0 "[GER_unrest_in_elsass]"
+  GER_unrest_in_elsass_tracking:0 "§Y[?GER.Germany_Elsass_Unrest]§!"
+
+  GER_unrest_in_austria:0 "[GER_unrest_in_austria]"
+  GER_unrest_in_austria_tracking:0 "§Y[?GER.Germany_Austria_Unrest]§!"
+
+  GER_unrest_in_bavaria:0 "[GER_unrest_in_bavaria]"
+  GER_unrest_in_bavaria_tracking:0 "§Y[?GER.Germany_Bavaria_Unrest]§!"
+
+  GER_unrest_in_saxony:0 "[GER_unrest_in_saxony]"
+  GER_unrest_in_saxony_tracking:0 "§Y[?GER.Germany_Saxony_Unrest]§!"
+  
+  GER_unrest_in_hannover:0 "[GER_unrest_in_hannover]"
+  GER_unrest_in_hannover_tracking:0 "§Y[?GER.Germany_Hannover_Unrest]§!"
+
+  GER_unrest_in_brandenburg:0 "[GER_unrest_in_brandenburg]"
+  GER_unrest_in_brandenburg_tracking:0 "§Y[?GER.Germany_Brandenburg_Unrest]§!"
+
+  
+
+  GER_Austria_Text:0 "Volksstaat Österreich"
+  GER_Bayern_Text:0 "Volksstaat Bayern"
+  GER_Sachsen_Text:0 "Volksstaat Sachsen"
+  GER_Brandenburg_Text:0 "Volksstaat Brandenburg"
+  GER_Hannover_Text:0 "Volksstaat Hannover"
+  GER_Rheinland_Text:0 "Volksstaat Rheinland"
+  GER_Frankfurt_Text:0 "Volksstaat Frankfurt"
+  GER_Elsass_Text:0 "Volksstaat Elsass"
+
 
   GER_Offer_Concessions:0 "Offer General Concessions on Autonomy"
   GER_Emergency_Meetings:0 "Emergency Meetings with the Autonomies"
@@ -648,11 +707,14 @@
   GER_Saxony_Unrest_Reduce_Ten_tt:0 "§YSaxon Unrest will be reduced by§! §G10%§!\n"
   GER_Hannover_Unrest_Reduce_Ten_tt:0 "§YHannoverian Unrest will be reduced by§! §G10%§!\n"
 
-  GER_Rhineland_Unrest_Increase_Five_tt:0 "§YRhenish Unrest will be increased by§! §R5%§!\n"
-  GER_Brandenburg_Unrest_Increase_Five_tt:0 "§YBrandenburger Unrest will be increased by§! §R5%§!\n"
-  GER_Bavaria_Unrest_Increase_Five_tt:0 "§YBavarian Unrest will be increased by§! §R5%§!\n"
-  GER_Saxony_Unrest_Increase_Five_tt:0 "§YSaxon Unrest will be increased by§! §R5%§!\n"
-  GER_Hannover_Unrest_Increase_Five_tt:0 "§YHannoverian Unrest will be increased by§! §R5%§!\n"
+  GER_Rhineland_Unrest_Increase_Five_tt:0 "§YRhenish Unrest will be increased by§! §R5§!\n"
+  GER_Brandenburg_Unrest_Increase_Five_tt:0 "§YBrandenburger Unrest will be increased by§! §R5§!\n"
+  GER_Bavaria_Unrest_Increase_Five_tt:0 "§YBavarian Unrest will be increased by§! §R5§!\n"
+  GER_Saxony_Unrest_Increase_Five_tt:0 "§YSaxon Unrest will be increased by§! §R5§!\n"
+  GER_Hannover_Unrest_Increase_Five_tt:0 "§YHannoverian Unrest will be increased by§! §R5§!\n"
+  GER_Austria_Unrest_Increase_Five_tt:0 "§YAustrian Unrest will be increased by§! §R5§!\n"
+  GER_Elsass_Unrest_Increase_Five_tt:0 "§YAlsatian Unrest will be increased by§! §R5§!\n"
+  GER_Frankfurt_Unrest_Increase_Five_tt:0 "§YHessian Unrest will be increased by§! §R5§!\n"
 
   GER_All_Unrest_Reduce_Five_tt:0 "§YAll Unrest will be reduced by§! §G5%§!\n"
   GER_All_Unrest_Reduce_Ten_tt:0 "§YAll Unrest will be reduced by§! §G10%§!\n"
