--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -119,6 +119,9 @@
  VICTORY_POINTS_9932:0 "Trabzon"
  VICTORY_POINTS_3938:0 "Madrid"
  VICTORY_POINTS_9764:0 "Barcelona"
+ VICTORY_POINTS_9845:0 "Maó"
+ VICTORY_POINTS_9793:0 "Palma"
+ VICTORY_POINTS_7114:0 "Ibiza"
  VICTORY_POINTS_740:0 "Bilbao"
  VICTORY_POINTS_758:0 "Coruna"
  VICTORY_POINTS_875:0 "Cordoba"
