super event work and fordism re-enabled

--- a/localisation/PB_Super_Events_l_english.yml
+++ b/localisation/PB_Super_Events_l_english.yml
@@ -1,29 +1,33 @@
 ﻿l_english:
 
   get_super_event_title:0 "-"
-  GFX_SPEVNT_George_V_Death:0 "The Death of George V"
-  GFX_SPEVNT_George_V_Death_TEXT:0 "And he walked in all the sins of his father, which he had done before him."
 
-  GFX_SPEVNT_Turkish_Civil_War:0 "The Turkish Civil War"
-  GFX_SPEVNT_Turkish_Civil_War_TEXT:0 "One last gasp from the Sick Man, bringing with it the fires of civil discontent."
+  GFX_SPEVNT_London_Stock_Crisis:0 "THE LONDON STOCK CRISIS"
+  GFX_SPEVNT_London_Stock_Crisis_TEXT:0 "In other periods of depression, it has always been possible to see some things which were solid and upon which you could base hope... but as I look around about, I now see nothing to give ground to hope.\n\n§O-John Maynard Keynes-§!"
+  SPEVNT_SCA_American_War_CLOSETEXT:0 "§OAN EMPIRE IN CRISIS?§!"
 
-  GFX_SPEVNT_Polish_Uprising:0 "The Polish Uprising"
-  GFX_SPEVNT_Polish_Uprising_TEXT:0 "A knife drives into the jackboot of tyranny, and the blood drawn from that wound carries freedom.\nPoland is not yet lost."
+  GFX_SPEVNT_Polish_Uprising:0 "The POLISH REBELLION"
+  GFX_SPEVNT_Polish_Uprising_TEXT:0 "And said Poland, "\Whoever comes to me, will be free and equal, because I am freedom."\n\n§O-The Books of the Polish Nation-§!"
+  GFX_SPEVNT_Polish_Uprising_CLOSETEXT:0 "§OPOLAND IS NOT YET LOST§!"
 
-  SPEVNT_Anglo_Indian_War:0 "The Anglo-Indian War"
-  SPEVNT_Anglo_Indian_War_TEXT:0 "A coward with something to prove is often more dangerous than a brave man with nothing to lose."
+  SPEVNT_Anglo_Indian_War:0 "THE ANGLO-INDIAN WAR"
+  SPEVNT_Anglo_Indian_War_TEXT:0 "The rescue of India from ages of barbarism, tyranny, and internecine war and its slow but ceaseless forward march to civilisation constitute upon the whole the finest achievement of our history.\n\n§O-Winston Churchill-§!"
+  SPEVNT_Anglo_Indian_War_CLOSETEXT:0 "§OPERFIDIOUS ALBION EXPANDS§!"
 
-  SPEVNT_Wuchang_Revolution:0 "The Chinese Revolution"
-  SPEVNT_Wuchang_Revolution_TEXT:0 "Little by little, the old world crumbled, and not once did the Emperor imagine that some of the pieces might fall on him."
+  SPEVNT_Wuchang_Revolution:0 "THE WUCHANG REVOLUTION"
+  SPEVNT_Wuchang_Revolution_TEXT:0 "The Chinese people have only family and clan solidarity; they do not have national spirit...they are just a heap of loose sand...Other men are the carving knife and serving dish; we are the fish and the meat.\n\n§O-Sun Yat-sen-§!"
+  SPEVNT_Wuchang_Revolution_CLOSETEXT:0 "§OTHE FLAME OF THE FAR EAST IS LIT§!"
 
-  SPEVNT_Irish_Secession_Crisis:0 "The Irish Secession Crisis"
-  SPEVNT_Irish_Secession_Crisis_TEXT:0 "'Twas better to die 'neath an Irish sky than at Suvla or Sud el Bar and from the plains of Royal Meath"
+  SPEVNT_Irish_Secession_Crisis:0 "THE IRISH SECESSION WAR"
+  SPEVNT_Irish_Secession_Crisis_TEXT:0 "Our strength as a nation will depend upon our economic freedom, and upon our moral and intellectual force. In these we can become a shining light in the world.\n\n§O-Michael Collins-§!"
+  SPEVNT_Irish_Secession_Crisis_CLOSETEXT:0 "§OCOME OUT YE BLACK AND TANS§!"
 
   SPEVNT_Mexican_Revolution:0 "The Mexican Revolution"
   SPEVNT_Mexican_Revolution_TEXT:0 "The people marched forward, flags held high, and the foundation of the Empire shook beneath them."
 
-  SPEVNT_Atom_Bomb:0 "The Atom Bomb"
-  SPEVNT_Atom_Bomb_TEXT:0 "Thus Prometheus stole fire from the gods, and for his transgressions mankind was forever damned."
+  SPEVNT_Atom_Bomb:0 "THE ATOMIC AGE BEGINS"
+  SPEVNT_Atom_Bomb_TEXT:0 "Our technical civilization has just reached its greatest level of savagery. We will have to choose, in the more or less near future, between collective suicide and the intelligent use of our scientific conquests.\n\n§O-Albert Camus-§!"
+  SPEVNT_Atom_Bomb_CLOSETEXT:0 "§OA NEW HELL IS LET LOOSE§!"
 
   SPEVNT_Second_Great_War:0 "The 2nd Great War"
   SPEVNT_Second_Great_War_TEXT:0 "The Long Peace lies shattered, and the world is aflame. Now is the time of monsters."
